 - Ensured that any preference change is reflected in every open window, as
   well as windows opened from that point on.
 - Localized into Spanish, because Minh knows Spanish.
 - Localized into Vietnamese, in case Firefox ever gets an official translation
   into Vietnamese. One can hope...

Version 20080224.66 (Thursday, June 19, 2008)
 - Fixed the checkbox menu items, which were completely broken.
 - Added option to show and hide the status bar panel.

Version 20080224.87 (Wednesday, July  2, 2008)
 - Added a preference window that currently covers all the options available
   through about:config.
 - Added toolbar buttons for enabling and disabling AVIM and for choosing the
   input method. The buttons can be added to the toolbar using the Customize
   Toolbar dialog box.
 - Added support for AJAX applications like Gmail and rich text editors like
   FCKeditor. More testing is needed, however.
 - Fixed issue where AVIM would ignore words following certain punctuation
   characters, such as curly quotes and ellipses.
 - Changed keyboard shortcut for toggling AVIM to Ctrl+Alt+V (Cmd+Opt+V on the
   Mac) to avoid a collision with Adblock Plus.
 - Added the Ctrl+: (Cmd+:) and Ctrl+; (Cmd+;) keyboard shortcuts to cycle back
   and forward through the input method list.
 - Added the Ctrl+Alt+S (Cmd+Opt+S) keyboard shortcut to toggle the "Enforce
   Spelling" option.
 - Added the Ctrl+Alt+; (Cmd+Opt+;) keyboard shortcut to toggle the "Old
   Accents" option.
 - Removed the menu item to toggle the status bar panel, since it is redundant
   with the preference window now.

Version 20080224.91 (Thursday, July  3, 2008)
 - Added a warning that indicates when Mudim is enabled and turned on, along
   with a button to turn Mudim off (as opposed to disabling the extension).
   Mudim often interferes with AVIM, since the two extensions serve the same
   purpose.
 - Optimized the toolbar button images.

Version ${Version} (${Date})