@@ -20,9 +20,10 @@ pref("extensions.avim.statusBarPanel", true);
 
 /*
  * Ignore any fields that contain e-mail addresses, as well as the code
- * evaluation bar in the Error Console. Field IDs are separated by spaces.
+ * evaluation bar in the Error Console. Field IDs are case-insensitive and
+ * separated by spaces.
  */
-pref("extensions.avim.ignoredFieldIds", "TextboxEval colorzilla-textbox-hex e-mail email tx_tagName");
+pref("extensions.avim.ignoredFieldIds", "colorzilla-textbox-hex e-mail email textboxeval tx_tagname");
 
 /* Include some standard input methods in the Auto method. */
 pref("extensions.avim.auto.telex", true);
