@@ -35,7 +35,7 @@
 		<em:description>Type fully-accented Vietnamese directly into any webpage or dialog box using a standard keyboard.</em:description>
 		<em:creator>Minh Nguyen</em:creator>
 		<em:contributor>Hieu Dang</em:contributor>
-		<em:homepageURL>http://avim.veneroida.com/</em:homepageURL>
+		<em:homepageURL>http://www.1ec5.org/software/avim/</em:homepageURL>
 		<em:iconURL>chrome://avim/content/avim.png</em:iconURL>
 		
 		<!-- Spanish -->
@@ -46,7 +46,7 @@
 				<em:description>Teclar en vietnamita con todos los acentos, directamente en cualquier página Web o caja de diálogo, usando un teclado estándar.</em:description>
 				<em:creator>Minh Nguyen</em:creator>
 				<em:contributor>Hieu Dang</em:contributor>
-				<em:homepageURL>http://avim.veneroida.com/</em:homepageURL>
+				<em:homepageURL>http://www.1ec5.org/software/avim/</em:homepageURL>
 			</Description>
 		</em:localized>
 		
@@ -58,7 +58,7 @@
 				<em:description>Gõ tiếng Việt có dấu thẳng vào bất cứ trang Web hay hộp thoại nào, chỉ cần bàn phím thường.</em:description>
 				<em:creator>Nguyễn Xuân Minh</em:creator>
 				<em:contributor>Đặng Trần Hiếu</em:contributor>
-				<em:homepageURL>http://avim.veneroida.com/</em:homepageURL>
+				<em:homepageURL>http://www.1ec5.org/software/avim/index.vi.html</em:homepageURL>
 			</Description>
 		</em:localized>
 	</Description>
